# opencv-contrib-openvino-docker_image

./: CMakeLists.txt  Dockerfile  LICENSE.md  README.md  cvlib_dependencies.sh  dlib.sh  nexus.sh  opencv_contrib.sh  opencv_install.sh  opencv_prepare.sh  openvino.sh  openvino_disable.sh  settings.xml  test.cpp
